--- a/src/assets/component/Navbar/styles.css
+++ b/src/assets/component/Navbar/styles.css
@@ -17,7 +17,7 @@
 
 /* Nav bar */
 .main-navbar{
-    background-color: #1E1E1E;
+    background-color: #14181E;
     width: 100%;
     height: 100px;
     position: sticky;
@@ -26,11 +26,14 @@
     font-family: 'Poppins',sans-serif;
     align-items: center;
     justify-content: space-around;
+   
+  user-select: none;
 }
 .main-name{
     color: #4BFFA5;
-    margin-right: 20%;
+    margin-right: 15%;
     font-size: 15px;
+    cursor: pointer;
     }
 
 .nav-item{
@@ -44,11 +47,38 @@ display: flex;
     font-size: 18px;
     transition: color 0.9s ;
 }
+.nav-item a.active{
+    color: #4BFFA5;
+}
 
 .nav-item a:hover{
     color: #4BFFA5;
-   
+}
+
+.menu-icon{
+cursor: pointer;
+margin-left: 18px;
+margin-bottom: -4px;
 }
 
 
+@media only screen and (max-width: 540px) {
+    .sticky {
+        background: red;
+    
+    }
+}
 
+/* @media only screen and (max-width: 1000px) and (max-width: 500px) {
+    .sticky {
+        width: 100%;
+    }
+}
+
+
+@media only screen and (max-width:600px){
+    .main-navbar{
+        background: red;
+        width:  100%;
+    }
+} */
