--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+::-moz-selection {
+    color: #4BFFA5;
+    background: black;
+}
+
+::selection {
+    color: #4BFFA5;
+    background: black;
+  }
