--- a/src/assets/pages/AboutMe/styles.css
+++ b/src/assets/pages/AboutMe/styles.css
@@ -18,9 +18,9 @@
 
 .text-contect{
     display: flex;
-    justify-self: center;
     flex-direction: column;
     margin-top: 50px;
+    margin-left: 40px;
 }
 
 .text-contect h2,
