--- a/src/assets/pages/Service/styles.css
+++ b/src/assets/pages/Service/styles.css
@@ -8,7 +8,7 @@
     letter-spacing: 5px;
     flex-direction: column;
     height: 690px;
-
+    flex-wrap: nowrap;
 }
 
 .service-container h2{
@@ -22,4 +22,5 @@
     display: flex;
     justify-content: space-around;
     margin-top: 10px;
+ 
 }
