--- a/src/assets/pages/Skills/styles.css
+++ b/src/assets/pages/Skills/styles.css
@@ -41,13 +41,17 @@
 
 .skills-title{
     font-size: 20px;
+
 }
 
 .tch-skills {
     width: 100%;
 
 }
-.progress-bar{
-
+.my-Pro-bar{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    /* gap: 40px; */
     
 }
