--- a/src/assets/component/Cad/styles.css
+++ b/src/assets/component/Cad/styles.css
@@ -2,8 +2,8 @@
     background-color: #1F242D;
     border: #4BFFA5 solid 1px;
     width: 30%;
-    font-family: 'Poppins', sans-serif;
     color: white;
+    font-family: 'Poppins', sans-serif;
     letter-spacing: 5px;
     border-radius: 20px;
     margin-top: 50px;
@@ -38,16 +38,14 @@
     cursor: pointer;
 }
 
-.icon:hover{
-    color: #4BFFA5;
-}
+
 
 .btn-div{
     margin-top: 30px;
     margin-left: 20%;
 }
 
-.btn{
+.cad-btn{
     margin: 0;
     padding: 10px;
 
