--- a/src/assets/component/Timeline/styles.css
+++ b/src/assets/component/Timeline/styles.css
@@ -1,10 +1,10 @@
 .titleTi{
-    font-size: 15px;
+    font-size: 18px;
     color: '#4BFFA5';
     letter-spacing: 1px;
 }
 .pgTi{
-    font-size: 10px;
+    font-size: 12px !important;
     letter-spacing: 1px;
 }
 
@@ -12,8 +12,6 @@
     color: #4BFFA5;
    margin-left: 50px;
    margin-right: 30px;
-    
-    
   }
 
 
