--- a/src/component/TextInput/styles.css
+++ b/src/component/TextInput/styles.css
@@ -3,7 +3,7 @@
     padding: 10px;
     border: 1px solid #4BFFA5; 
     border-radius: 5px;
-    background-color: #1E1E1E;
+    background-color: #14181E;
     color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     font-family: 'Poppins', sans-serif;
