--- a/src/component/Navbar/styles.css
+++ b/src/component/Navbar/styles.css
@@ -1,5 +1,5 @@
 /* .sticky-nevbar */
-.sticky{
+.sticky {
     width: 100%;
     height: 40px;
     background-color: #1F242D;
@@ -7,7 +7,8 @@
     justify-content: center;
     align-items: center;
 }
-.fonts{
+
+.fonts {
     font-family: 'Zilla Slab', serif;
     color: #4BFFA5;
     font-size: 20px;
@@ -16,58 +17,77 @@
 }
 
 /* Nav bar */
-.main-navbar{
+.main-navbar {
     background-color: #14181E;
     width: 100%;
-    height: 100px;
+    height: auto;
     position: sticky;
     top: 0px;
     display: flex;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
     align-items: center;
     justify-content: space-around;
-  user-select: none;
-  z-index: 100;
+    user-select: none;
+    z-index: 100;
 }
-.main-name{
+
+.main-name {
     color: #4BFFA5;
     margin-right: 15%;
-    font-size: 15px;
-    cursor: pointer;
-    }
 
-.nav-item{
-display: flex;
+    cursor: pointer;
 }
 
-.nav-item a{
+.nav-item {
+    display: flex;
+}
+
+
+.nav-text {
+    font-size: 30px;
+}
+
+.nav-item a {
     text-decoration: none;
     color: white;
-    margin:30px;
+    margin: 30px;
     font-size: 18px;
-    transition: color 0.9s ;
+    transition: color 0.9s;
 }
-.nav-item a.active{
+
+.nav-item a.active {
     color: #4BFFA5;
 }
 
-.nav-item a:hover{
+.nav-item a:hover {
     color: #4BFFA5;
 }
 
-.menu-icon{
-cursor: pointer;
-margin-left: 18px;
-margin-bottom: -4px;
+.menu-icon {
+    display: flex;
+    cursor: pointer;
+    margin-left: 18px;
+    margin-bottom: 4px;
+    height: 30px;
+
 }
 
+.text-div{
+    display: flex;
+    align-items: center;
+}
 
-@media only screen and (max-width: 540px) {
+@media only screen and (max-width: 430px) {
     .sticky {
-        background: red;
-    
+        text-align: center;
+    }
+
+    .sticky h1 {
+        font-size: 15px;
+        margin-top: 10px;
     }
 }
+
 
 /* @media only screen and (max-width: 1000px) and (max-width: 500px) {
     .sticky {
