--- a/src/pages/Footer/styles.css
+++ b/src/pages/Footer/styles.css
@@ -16,11 +16,16 @@
     border-radius: 100%;
     margin-top: 30px;
     cursor: pointer;
+    width: 50px;
+    height:50px;
 }
 
 .footer-image img {
-    width: 50px;
-    height: 50px;
+    /* width: 50px; */
+    /* height: 50px; */
+
+    width: 70%;
+    height: auto;
 }
 
 .footer-text{
