--- a/src/pages/HomePage/styles.css
+++ b/src/pages/HomePage/styles.css
@@ -10,10 +10,8 @@
 }
 
 .home-img {
-    width: 30%;
+    width: 450px;
     margin-top: -17px;
-    display: flex;
-    max-width: 100%;
 
 }
 
@@ -22,18 +20,18 @@
     color: white;
     font-size: 18px;
     letter-spacing: 5px;
-    margin-right: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-   line-height: 70px;
+    line-height: 70px;
+    width: 100%;
 }
 
 .contend-div h2,
 h1,
 p {
     font-weight: normal;
-    
+
 }
 
 .p-span {
@@ -46,15 +44,70 @@ p {
     gap: 30px;
     margin-right: 50px;
     justify-content: center;
-   
+
 }
 
 .social-media a {
     color: white;
     font-size: 23px;
-    transition: color 0.9s ;
+    transition: color 0.9s;
 }
 
-.social-media a:hover{
+.social-media a:hover {
     color: #4BFFA5;
 }
+
+.social-media a{
+    font-size: 30px;
+}
+
+ @media only screen and (max-width: 430px) {
+    .home-img {
+        width: 250px;
+    }
+
+    .contend-div {
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        align-items: center;
+        letter-spacing: 2px;
+        gap: 5px;
+        margin-top: -50px;
+        background: rgba(20, 24, 30, 0.700);
+    }
+
+    .contend-div h1,
+    h2,
+    p {
+        font: 1em sans-serif;
+        display: flex;
+        align-items: center;
+
+    }
+
+    .contend-div p {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .social-media {
+        position: relative;
+        width: 0px;
+        gap: 20px;
+        right: 0;
+        top: -300px;
+        left: 120px;
+        margin: auto;
+    }
+    .main-container{
+        display: block;
+        height: 580px;
+    }
+    .social-media a{
+        font-size: 20px;
+    }
+    
+
+} 
